# certified-local-participation-gate

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN_V0_1_1_MAINTENANCE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: api-stability.md  architecture.md  decision-semantics.md  formal-invariants.md  glossary.md  integrations.md  porting.md  proof-obligations.md  release-v0.1.0-checklist.md  release-v0.1.1-checklist.md  schemas.md  theory-mapping.md  threat-model.md
examples/: basic_decision_demo.py  refuse_without_authority_demo.py  verify_before_act_demo.py
examples/conformance/: act.valid.json  assist_partial_capability.valid.json  demo_implicit_feasible.valid.json  exit_unrecoverable_scope.valid.json  invalid_bad_uncertainty_bounds.invalid.json  invalid_missing_policy.invalid.json  refuse_disallowed_task.valid.json  refuse_no_authority.valid.json  verify_missing_evidence.valid.json  withdraw_high_harm.valid.json
src/clpg/: __init__.py  __main__.py  authority.py  canonical.py  claim.py  cli.py  conformance.py  consistency.py  controller.py  corroboration.py  decision.py  digest.py  eligibility.py  engine.py  enums.py  evidence.py  exceptions.py  feasibility.py  ledger.py  lineage.py  models.py  policy.py  receipts.py  risk.py  schemas.py  verification.py
tests/: clpg_test_helpers.py  test_canonical_digest.py  test_cli.py  test_conformance.py  test_decision_policy.py  test_docs_metadata.py  test_ledger.py  test_models.py  test_property_invariants.py  test_receipts.py
