[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "clpg"
version = "0.1.1"
description = "Certified Local Participation Gate: deterministic local participation decisions for AI agents under declared observable records."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "K. Takahashi" }
]
keywords = [
  "ai-agents",
  "governance",
  "deterministic",
  "receipts",
  "local-first",
  "participation-gate"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed"
]
dependencies = [
  "pydantic>=2.6",
  "rich>=13.7",
  "typer>=0.12"
]

[project.scripts]
clpg = "clpg.cli:app"

[project.urls]
Repository = "https://github.com/kadubon/certified-local-participation-gate"
Source = "https://github.com/kadubon/certified-local-participation-gate"
Documentation = "https://github.com/kadubon/certified-local-participation-gate/tree/main/docs"
Issues = "https://github.com/kadubon/certified-local-participation-gate/issues"

[dependency-groups]
dev = [
  "build>=1.2",
  "hypothesis>=6.98",
  "mypy>=1.8",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.4"
]

[tool.hatch.build.targets.wheel]
packages = ["src/clpg"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = false
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
